--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/prajankya/folder-crypt/issues"
   },
-  "homepage": "https://github.com/prajankya/folder-crypt#readme"
+  "homepage": "https://github.com/prajankya/folder-crypt#readme",
+  "dependencies": {
+    "colors": "^1.1.2",
+    "commander": "^2.9.0"
+  }
 }
