--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin":{
+     "folder-crypt": "bin/folder-crypt.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prajankya/folder-crypt.git"
