--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "folder-crypt",
   "version": "0.1.0",
   "description": "A Nodejs based folder encryptor and decryptor",
-  "main": "index.js",
+  "main": "bin/folder-crypt.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
